<resources>
    <string name="app_name">AnimaPets</string>
    <string name="textSenha">Senha</string>
    <string name="textCPF">CPF</string>
    <string name="buttonEntrar">Entrar</string>
    <string name="buttonSenha">Esqueci minha senha</string>
    <string name="buttonCadastrar">Cadastre-se</string>
    <string name="searchV">Search</string>
    <string name="ok">ok</string>
    <string name="fundosobreposto">Fundo sobreposto</string>
    <string name="logo">logo</string>
    <string name="rect">retangulo</string>
    <string name="btnInfoB">info blue</string>
    <string name="btnInfoG">info green</string>
    <string name="btnAvalie">Avalie</string>
    <string name="btnMudar">Mudar tipo de conta</string>
    <string name="btnTrocar">Alterar animal da conta</string>
    <string name="btnVitrine">Vai para tela da vitrine</string>
    <string name="btnMenu">Menu principal</string>
    <string name="papelMain">Papel de parede da Main</string>
    <string name="txt_raca">Raça</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_kitMes">Kit do mês</string>
    <string name="txt_novoKit">novo Kit</string>
    <string name="txt_Conta">PREMIUM</string>
    <string name="retangulos">Retangulos coloridos</string>
    <string name="titleracao">Ração</string>
    <string name="home">Vai para box</string>
    <string name="troque">Troque de ração de forma rápida e fácil. Só clicar*</string>
    <string name="txt_idade">Idade</string>
    <string name="escolha">Escolha sua ração</string>
    <string name="txt_racaoAtual">Dados sobre a ração atual</string>
    <string name="txt_outraRacao">Dados sobre outra ração</string>
    <string name="btn_infoY">Info nutricional outra ração</string>
    <string name="btn_infoG">Info nutricional ração atual</string>
    <string name="btn_infoB">Info troca de ração</string>
    <string name="btn_alterar">Alterar ração</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_visualizar">Visualizar</string>
    <string name="sombra">Desaparece ao clicar em visualizar</string>
    <string name="fundo">Fundo</string>
    <string name="compras">compras</string>
    <string name="carrinho">Carrinho</string>
    <string name="favoritos">Favoritos</string>
    <string name="novidades">Novidades</string>
    <string name="box"> Volta para a box</string>
    <string name="vazia">Página não implementada</string>
    <string name="perfilImage">Imagem de perfil</string>
    <string name="produtosboxImage">Produtos do box do mes</string>
    <string name="pedigree1">Pedigree em cima</string>
    <string name="pedigree2">Pedigree embaixo</string>
    <string name="dogchow1">DogChow em cima</string>
    <string name="dogchow2">DogChow embaixo</string>
    <string name="paredepopup">Papel de parede e mensagem do pop up</string>
    <string name="cancelbtn">Botão cancelar alteração de ração</string>
    <string name="changebtn">Botão confirmar alteraração de ração</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>


    <string name="country_prompt">Menu</string>
    <string-array name="dropdownmain">
        <item></item>
        <item>Vantagens</item>
        <item>Rações</item>
        <item>Mr. Pet</item>
        <item>Mensagens</item>
        <item>Configurações</item>
        <item>Quem Somos</item>
        <item>Fale Conosco</item>
        <item>Logout</item>
    </string-array>
</resources>
