<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fundo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fundosobreposto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fundo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="527dp"
        android:layout_marginEnd="155dp"
        android:contentDescription="@string/titleracao"
        android:text="@string/titleracao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btn_alterar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnMenu"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="555dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="316dp"
        android:contentDescription="@string/btnMenu"
        app:layout_constraintBottom_toTopOf="@+id/btn_infoY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu" />

    <ImageButton
        android:id="@+id/btnHome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="0dp"
        android:contentDescription="@string/home"
        app:layout_constraintBottom_toBottomOf="@+id/btnMenu"
        app:layout_constraintEnd_toStartOf="@+id/title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        app:srcCompat="@drawable/casa" />

    <TextView
        android:id="@+id/txt_troque"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="177dp"
        android:contentDescription="@string/troque"
        android:text="@string/troque"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/txt_nome"
        android:text="@string/txt_nome"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnHome"
        app:layout_constraintTop_toBottomOf="@+id/btnHome" />

    <TextView
        android:id="@+id/txt_idade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:contentDescription="@string/txt_idade"
        android:text="@string/txt_idade"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_nome"
        app:layout_constraintStart_toEndOf="@+id/txt_nome" />

    <TextView
        android:id="@+id/txt_raca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/txt_raca"
        android:text="@string/txt_raca"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/txt_nome"
        app:layout_constraintTop_toTopOf="@+id/txt_nome" />

    <TextView
        android:id="@+id/txt_Conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:layout_marginTop="6dp"
        android:text="@string/txt_Conta"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txt_idade"
        app:layout_constraintTop_toBottomOf="@+id/txt_raca" />

    <TextView
        android:id="@+id/txt_escolha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/escolha"
        android:text="@string/escolha"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_troque"
        app:layout_constraintEnd_toEndOf="@+id/txt_troque" />

    <ImageButton
        android:id="@+id/btn_infoY"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="29dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="18dp"
        android:contentDescription="@string/btn_infoY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_alterar"
        app:layout_constraintTop_toBottomOf="@+id/btnMenu"
        app:srcCompat="@drawable/infoyellow" />

    <ImageButton
        android:id="@+id/btn_infoG"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="367dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/btn_infoG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        app:srcCompat="@drawable/infogreenn" />

    <ImageButton
        android:id="@+id/btn_infoB"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/btn_infoB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        app:srcCompat="@drawable/infobluee" />

    <ImageButton
        android:id="@+id/btn_alterar"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="195dp"
        android:contentDescription="@string/btn_alterar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_infoY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/alterar" />

    <ImageButton
        android:id="@+id/btn_cancelar"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="74dp"
        android:contentDescription="@string/btn_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/cancelar" />


    <ImageView
        android:id="@+id/dogchow1"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogchow1"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        app:srcCompat="@drawable/dogchow" />

    <ImageView
        android:id="@+id/pedigree1"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/pedigree1"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469"
        app:srcCompat="@drawable/pedigree" />

    <ImageView
        android:id="@+id/pedigree2"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/pedigree2"
        android:visibility="visible"
        app:srcCompat="@drawable/pedigree"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="387dp" />

    <ImageView
        android:id="@+id/dogchow2"
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogchow2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/dogchow" />

    <ImageView
        android:id="@+id/sombra"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="323dp"
        android:contentDescription="@string/sombra"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sombra" />

    <ImageButton
        android:id="@+id/btn_visualizar"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/btn_visualizar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/visualizar" />

    <ImageView
        android:id="@+id/perfilImageRac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/perfilImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/perfil" />

</android.support.constraint.ConstraintLayout>