<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorPrimary"
    tools:context="com.example.frana.animapets.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/papelParede"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/papelMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnMenu"
            app:srcCompat="@drawable/papeldeparede" />

        <TextView
            android:id="@+id/txt_nome"
            android:layout_width="137dp"
            android:layout_height="32dp"
            android:layout_marginStart="167dp"
            android:layout_marginTop="68dp"
            android:text="@string/txt_nome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/txt_nome" />

        <TextView
            android:id="@+id/txt_raca"
            android:layout_width="142dp"
            android:layout_height="32dp"
            android:layout_marginStart="167dp"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/txt_raca"
            android:text="@string/txt_raca"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_Conta"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/txt_Conta"
            android:text="@string/txt_Conta"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btnMenu"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txt_nome"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_kitMes"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="172dp"
            android:contentDescription="@string/txt_kitMes"
            android:text="@string/txt_kitMes"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/txt_novoKit"
            app:layout_constraintStart_toStartOf="@+id/txt_novoKit"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_novoKit"
            android:layout_width="143dp"
            android:layout_height="32dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="408dp"
            android:contentDescription="@string/txt_novoKit"
            android:text="@string/txt_novoKit"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/btnAvalie"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="532dp"
            android:contentDescription="@string/btnMenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/menu" />

        <ImageButton
            android:id="@+id/btnInfoB"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/btnInfoB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/papelParede"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="@+id/papelParede"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.592"
            app:srcCompat="@drawable/infoblue" />

        <ImageButton
            android:id="@+id/btnInfoG"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/btnInfoG"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.054"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985"
            app:srcCompat="@drawable/infogreen" />

        <ImageButton
            android:id="@+id/btnTrocar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/btnTrocar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.222"
            app:srcCompat="@drawable/trocarperfil" />

        <ImageButton
            android:id="@+id/btnVitrine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="212dp"
            android:layout_marginTop="528dp"
            android:contentDescription="@string/btnVitrine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vitrine" />

        <ImageButton
            android:id="@+id/btnAvalie"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/btnAvalie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.601"
            app:srcCompat="@drawable/avalie" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.743"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/mudar" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
